Updated the HTML file with new content

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         <header>
             <h1>Ivanna Buckley's Blog</h1>
             <p>Cultivating Creativity and Growth</p>
-            <img class="profile-pic" src="Screenshot_20231002_214033_WhatsApp.jpg" alt="A picture of Ivanna Buckley">
+            <img class="profile-pic" src="Downloads/Screenshot_20231002_214033_WhatsApp.jpg" alt="A picture of Ivanna Buckley">
         </header>
         <main>
             <article>
                 <h2>Blog Post 1</h2>
                 <p>October 02, 2023 by Ivanna Buckley</p>
-                <img src="rayia-soderberg-5fOwDi6LXhE-unsplash.jpg" alt="A Picture of Daisies">
+                <img src="Downloads/rayia-soderberg-5fOwDi6LXhE-unsplash.jpg" alt="A Picture of Daisies">
                 <p>Welcome to "Vineyard Vibes: Cultivating Creativity and Growth"! Here, we embark on a journey of self-discovery, creativity, and personal development. Our goal is to create a nurturing space where ideas flourish and individuality thrives. As we explore various aspects of life, art, and personal growth, we invite you to join our community of like-minded individuals passionate about harnessing their inner potential. Our blog is a testament to the belief that, like a well-tended vineyard, with dedication and care, we can cultivate the richness of our lives, nurturing our talents and embracing the beauty of growth.</p>
                 <p> In our virtual vineyard, you'll find a variety of topics ranging from inspiring stories, creative expressions, and practical tips for personal development. We believe in the power of sharing experiences and learning from one another, so feel free to explore our posts, engage with our community, and let the journey of growth and creativity begin. Welcome to Vineyard Vibes, where each day brings a new opportunity to tend to the garden of your potential and savour the fruits of your unique journey.</p>
             </article>
             <article>
                 <h2>Blog Post 2</h2>
                 <p>October 02, 2023 by Ivanna Buckley</p>
-                <img src="nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="A Picture of a laptop, an open book, a mug and a vase with a flower on a table ">
+                <img src="Downloads/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="A Picture of a laptop, an open book, a mug and a vase with a flower on a table ">
                 <p>In the coming weeks, "Vineyard Vibes: Cultivating Creativity and Growth" is set to be a hub of exciting activities and insights. We'll be diving into the latest trends in software engineering, exploring cutting-edge technologies, and sharing hands-on tutorials to help you stay at the forefront of this dynamic field. Whether you're looking to enhance your coding skills, stay updated on industry developments, or simply seek inspiration for your next tech project, our upcoming content will have you covered.</p>
                 <p> But that's not all! We'll also embark on virtual journeys to explore captivating literary works, share travel tips and stories from far-flung destinations, and delve into the art of balancing a tech-savvy lifestyle with genuine human connections. Our goal is to create a diverse and engaging platform where you can discover new passions, foster personal growth, and connect with a community of like-minded individuals. So, stay tuned for our upcoming blog posts, and let's cultivate creativity and growth together at "Vineyard Vibes."</p>
             </article>
@@ -37,7 +37,7 @@
             <section>
                 <h3>Social Media</h3>
                 <ul>
-                    <li><"https://www.linkedin.com/in/ivanna-buckley-027570187/">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/ivanna-buckley-027570187/">LinkedIn</a></li>
                     <li><a href="https://www.instagram.com/moonshine.erz/">Instagram</a></li>
                 </ul>
             </section>
